# pantheon

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.claude/: launch.json  settings.json
.codex/: config.toml.example  hooks.json
.github/: copilot-instructions.md  pull_request_template.md
agents/: __init__.py  agent_factory.py  asset_executor_agent.py  base.py  chat_agent.py  code_review_agent.py  codebase_explorer_agent.py  conversation_agent.py  core_improvement_agent.py  generic_skill_agent.py  improvement_executor_agent.py  orchestrator_agent.py  self_code_writer.py  structural_intervention_executor_agent.py  tool_design_agent.py
commands/: __init__.py  affiliate.py  atlas.py  business.py  chat.py  content.py  daemons.py  db.py  doctor.py  eval.py  goal.py  handoff.py  hq.py  inbox.py  memory.py  orchestration.py  org.py  platform.py  plugin.py  portfolio.py  publish.py  revenue.py  session.py  story.py  tasks.py  traces.py  trends.py  ui_status.py  up.py  vault.py  version.py
config/: company_plugins.yaml  default.yaml  division_plugins.yaml  model_tiers.yaml  settings.py  token_quota.yaml  trend_sources.yaml
core/: __init__.py  _content_daemon_runner.py  _daemon_runner.py  _revenue_daemon_runner.py  _task_daemon_runner.py  _trend_daemon_runner.py  _vault_sync_daemon_runner.py  _watchdog_runner.py  bootstrap.py  io_utils.py  logging_config.py  orchestrator.py  org_factory.py  org_service.py  paths.py  persistence.py  scheduler.py
docs/: GUIDE.md  HANDOFF.md  architecture.md  claude-code-setup.md  cli_tools.md  environments.md  improvement_backlog.md  publishing.md  security.md  (+1 more)
(+851 files in other folders)
