[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantheon"
version = "0.1.0"
description = "個人開発者のための自己成長型 AI Organization プラットフォーム"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "code-review", "self-improvement", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic~=2.7",
    "python-dotenv~=1.0",
    "PyYAML~=6.0",
    "PyGithub~=2.3",
    "GitPython~=3.1",
    # No hosted-LLM SDKs: Pantheon runs everything through the local `claude` CLI.
    # langgraph is retained only as a local orchestration library (no API calls).
    "langgraph~=0.2",
    "langgraph-checkpoint-sqlite~=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-asyncio~=0.23",
    "ruff~=0.15",
]
web = [
    "fastapi~=0.111",
    "httpx~=0.27",
    "uvicorn[standard]~=0.30",
]

[project.scripts]
pantheon = "main:main"

[project.urls]
Repository = "https://github.com/nel-neru/pantheon"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "commands*", "core*", "config*", "github_integration*", "web*"]

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
